# cubiomes-template

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
modules/: CMakeLists.txt
modules/cubiomes-cmake/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
